Update to c# 11 and Net. 7

--- a/Future.Client/Future.Client.csproj
+++ b/Future.Client/Future.Client.csproj
@@ -1,12 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <OutputType>WinExe</OutputType>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework>net7.0</TargetFramework>
         <RollForward>Major</RollForward>
         <PublishReadyToRun>false</PublishReadyToRun>
         <TieredCompilation>false</TieredCompilation>
         <Authors>MrScautHD</Authors>
         <ApplicationIcon>logo.ico</ApplicationIcon>
+        <Title>Project-Future</Title>
+        <LangVersion>11</LangVersion>
     </PropertyGroup>
     <PropertyGroup>
         <ApplicationManifest>app.manifest</ApplicationManifest>
