--- a/Future.Common/Future.Common.csproj
+++ b/Future.Common/Future.Common.csproj
@@ -15,6 +15,7 @@
       <PackageReference Include="LiteNetLib" Version="1.0.0-rc.3" />
       <PackageReference Include="Lovebirb.MonoGame.SkinnedMeshImporter" Version="1.0.2" />
       <PackageReference Include="MonoSound" Version="1.6.1" />
+      <PackageReference Include="SpriteFontPlus" Version="0.9.2" />
     </ItemGroup>
 
     <ItemGroup>
