--- a/Future.Common/Future.Common.csproj
+++ b/Future.Common/Future.Common.csproj
@@ -12,10 +12,10 @@
       <PackageReference Include="Apos.Gui" Version="1.0.11" />
       <PackageReference Include="Apos.Input" Version="2.4.2" />
       <PackageReference Include="BepuPhysics" Version="2.5.0-beta.9" />
+      <PackageReference Include="FontStashSharp.MonoGame" Version="1.2.8" />
       <PackageReference Include="LiteNetLib" Version="1.0.0-rc.3" />
       <PackageReference Include="Lovebirb.MonoGame.SkinnedMeshImporter" Version="1.0.2" />
       <PackageReference Include="MonoSound" Version="1.6.1" />
-      <PackageReference Include="SpriteFontPlus" Version="0.9.2" />
     </ItemGroup>
 
     <ItemGroup>
