Add DrawFont, Fixed Camera get Created more then 1 Time, Add DebugOverlay,  Fixed MonoGame Lib not right installed

--- a/Future.Server/Future.Server.csproj
+++ b/Future.Server/Future.Server.csproj
@@ -12,4 +12,9 @@
       <ProjectReference Include="..\Future.Common\Future.Common.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.303" />
+      <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303" />
+    </ItemGroup>
+
 </Project>
