--- a/Future.Client/Future.Client.csproj
+++ b/Future.Client/Future.Client.csproj
@@ -25,14 +25,15 @@
         <PackageReference Include="Apos.Input" Version="2.4.2" />
         <PackageReference Include="FontStashSharp.MonoGame" Version="1.2.8" />
         <PackageReference Include="Lovebirb.MonoGame.SkinnedMeshImporter" Version="1.0.2" />
-        <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303" />
         <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.303" />
+        <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303" />
         <PackageReference Include="MonoSound" Version="1.6.1" />
     </ItemGroup>
     <ItemGroup>
       <Folder Include="csharp\renderer\entity" />
       <Folder Include="csharp\renderer\gui" />
       <Folder Include="csharp\renderer\sky" />
+      <Folder Include="csharp\util" />
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\Future.Common\Future.Common.csproj" />
