WIP File Manager, Fixed Font System

--- a/Future.Client/Future.Client.csproj
+++ b/Future.Client/Future.Client.csproj
@@ -9,6 +9,7 @@
         <ApplicationIcon>Icon.ico</ApplicationIcon>
         <Title>Project-Future</Title>
         <LangVersion>11</LangVersion>
+        <AssemblyName>Future</AssemblyName>
     </PropertyGroup>
     <PropertyGroup>
         <ApplicationManifest>app.manifest</ApplicationManifest>
