--- a/Future.Server/Future.Server.csproj
+++ b/Future.Server/Future.Server.csproj
@@ -6,6 +6,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <LangVersion>11</LangVersion>
+        <AssemblyName>Future</AssemblyName>
     </PropertyGroup>
 
     <ItemGroup>
