--- a/Future.Common/Future.Common.csproj
+++ b/Future.Common/Future.Common.csproj
@@ -10,6 +10,7 @@
     <ItemGroup>
       <PackageReference Include="BepuPhysics" Version="2.5.0-beta.10" />
       <PackageReference Include="LiteNetLib" Version="1.0.0-rc.3" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
     </ItemGroup>
 
     <ItemGroup>
