--- a/Future.Client/Future.Client.csproj
+++ b/Future.Client/Future.Client.csproj
@@ -29,6 +29,7 @@
         <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303" />
     </ItemGroup>
     <ItemGroup>
+      <Folder Include="content\models\entities" />
       <Folder Include="csharp\renderer\entity" />
       <Folder Include="csharp\renderer\gui" />
       <Folder Include="csharp\renderer\sky" />
