Added Registry System (Server + Client)

--- a/Future.Common/Future.Common.csproj
+++ b/Future.Common/Future.Common.csproj
@@ -16,7 +16,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="csharp" />
+      <Folder Include="csharp\registry\types" />
     </ItemGroup>
 
 </Project>
