--- a/Future.Common/Future.Common.csproj
+++ b/Future.Common/Future.Common.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\Easel\Easel\Easel.csproj" />
+        <ProjectReference Include="..\Easel\Easel.Physics\Easel.Physics.csproj" />
     </ItemGroup>
 
     <ItemGroup>
