Testing  Riptide Network Lib, Removed LiteNetLib

--- a/Future.Common/Future.Common.csproj
+++ b/Future.Common/Future.Common.csproj
@@ -12,8 +12,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="LiteNetLib" Version="1.0.0-rc.3" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+      <PackageReference Include="RiptideNetworking.Riptide" Version="2.0.0" />
     </ItemGroup>
 
     <ItemGroup>
