Added Simple Animation Message and Animation Hanlder (Network)

--- a/Stellution.Server/Stellution.Server.csproj
+++ b/Stellution.Server/Stellution.Server.csproj
@@ -11,4 +11,8 @@
       <ProjectReference Include="..\Stellution.Common\Stellution.Common.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="csharp\network\messages" />
+    </ItemGroup>
+
 </Project>
