--- a/Stellution.Client/Stellution.Client.csproj
+++ b/Stellution.Client/Stellution.Client.csproj
@@ -3,14 +3,16 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net7.0</TargetFramework>
-        <ImplicitUsings>disable</ImplicitUsings>
+        <ImplicitUsings>false</ImplicitUsings>
         <Nullable>disable</Nullable>
         <AssemblyName>Stellution.Client</AssemblyName>
         <RootNamespace>Stellution.Client</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\Easel\Easel\Easel.csproj" />
         <ProjectReference Include="..\Stellution.Common\Stellution.Common.csproj" />
+        <ProjectReference Remove="..\Easel\Easel\Easel.Headless.csproj" />
     </ItemGroup>
 
     <ItemGroup>
@@ -20,6 +22,6 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="csharp\util" />
+        <Folder Include="csharp\util" />
     </ItemGroup>
 </Project>
