--- a/Stellution.Common/Stellution.Common.csproj
+++ b/Stellution.Common/Stellution.Common.csproj
@@ -7,17 +7,14 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Easel\Easel\Easel.csproj" />
+        <ProjectReference Include="..\Easel\Easel\Easel.Headless.csproj" />
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+        <PackageReference Include="RiptideNetworking.Riptide" Version="2.0.0" />
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-      <PackageReference Include="RiptideNetworking.Riptide" Version="2.0.0" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="csharp\events" />
-      <Folder Include="csharp\registry\types" />
+        <Folder Include="csharp\events" />
+        <Folder Include="csharp\registry\types" />
     </ItemGroup>
 
 </Project>
