--- a/Stellution.Server/Stellution.Server.csproj
+++ b/Stellution.Server/Stellution.Server.csproj
@@ -3,16 +3,16 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net7.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
+        <ImplicitUsings>disable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Stellution.Common\Stellution.Common.csproj" />
+        <ProjectReference Include="..\Stellution.Common\Stellution.Common.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="csharp\network\messages" />
+        <Folder Include="csharp\network\messages" />
     </ItemGroup>
 
 </Project>
