--- a/Stellution.Common/Stellution.Common.csproj
+++ b/Stellution.Common/Stellution.Common.csproj
@@ -1,13 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
+    
     <PropertyGroup>
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
+    
+    <ItemGroup>
+        <ProjectReference Include="..\Easel\Easel\Easel.csproj" />
+    </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Easel\Easel\Easel.Headless.csproj" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="RiptideNetworking.Riptide" Version="2.0.0" />
     </ItemGroup>
@@ -16,5 +19,5 @@
         <Folder Include="csharp\events" />
         <Folder Include="csharp\registry\types" />
     </ItemGroup>
-
+    
 </Project>
