--- a/Stellution.Client/Stellution.Client.csproj
+++ b/Stellution.Client/Stellution.Client.csproj
@@ -20,7 +20,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <Folder Include="csharp\util" />
+        <Folder Include="csharp\particle\types\" />
     </ItemGroup>
     
 </Project>
