--- a/Stellution.Client/Stellution.Client.csproj
+++ b/Stellution.Client/Stellution.Client.csproj
@@ -7,6 +7,7 @@
         <Nullable>disable</Nullable>
         <AssemblyName>Stellution.Client</AssemblyName>
         <RootNamespace>Stellution.Client</RootNamespace>
+        <AssemblyVersion>1.0.0.0</AssemblyVersion>
     </PropertyGroup>
     
     <ItemGroup>
@@ -17,10 +18,6 @@
         <Content Include="content/**/*">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
-    </ItemGroup>
-
-    <ItemGroup>
-        <Folder Include="csharp\particle\types\" />
     </ItemGroup>
     
 </Project>
