--- a/src/Stellution.Client/Stellution.Client.csproj
+++ b/src/Stellution.Client/Stellution.Client.csproj
@@ -4,7 +4,7 @@
         <OutputType>Exe</OutputType>
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>disable</ImplicitUsings>
-        <Nullable>disable</Nullable>
+        <Nullable>enable</Nullable>
         <AssemblyName>Stellution.Client</AssemblyName>
         <RootNamespace>Stellution.Client</RootNamespace>
         <AssemblyVersion>1.0.0.0</AssemblyVersion>
