--- a/src/Stellution.Common/Stellution.Common.csproj
+++ b/src/Stellution.Common/Stellution.Common.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
     
     <ItemGroup>
-        <ProjectReference Include="..\Easel\Easel\Easel.csproj" />
+        <ProjectReference Include="..\..\Easel\Easel\Easel.csproj" />
     </ItemGroup>
 
     <ItemGroup>
